Aula02/ingress/ingress_http.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: kube.200-100-50-20.nip.io
    http:
     paths:
     - path: /
       backend:
         serviceName: service-ingress
         servicePort: 80
  - host: kube.200-100-50-10.nip.io
    http:
     paths:
     - path: /
       backend:
         serviceName: service-ingress
         servicePort: 80
